tests/nad_test_4/multinp.yaml
apiVersion: k8s.cni.cncf.io/v1beta1
kind: MultiNetworkPolicy
metadata:
  annotations:
    k8s.v1.cni.cncf.io/policy-for: l2-network
  name: allow-from-pod3-to-pod2-port-80
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      app: pod2
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            app: pod3
      ports:
        - port: 80
          protocol: TCP
  policyTypes:
  - Ingress
---
apiVersion: k8s.cni.cncf.io/v1beta1
kind: MultiNetworkPolicy
metadata:
  annotations:
    k8s.v1.cni.cncf.io/policy-for: l2-network
  name: deny-all-to-pod3
  namespace: ns2
spec:
  podSelector:
    matchLabels:
      app: pod3
  ingress: []
  policyTypes:
  - Ingress
---
