tests/nad_test_4/vm.yaml
apiVersion: kubevirt.io/v1 # vm1 in ns1 (with nad l2-network), the pod networks: pod-network
kind: VirtualMachine
metadata:
  name: vm1
  namespace: ns1
  labels:
    app: vm1
spec:
  dataVolumeTemplates:
    - apiVersion: cdi.kubevirt.io/v1beta1
      kind: DataVolume
      metadata:
        name: vm1
      spec:
        sourceRef:
          kind: DataSource
          name: fedora
          namespace: openshift-virtualization-os-images
        storage:
          resources:
            requests:
              storage: 30Gi
  running: true
  template:
    metadata:
      annotations:
        vm.kubevirt.io/flavor: small
        vm.kubevirt.io/os: fedora
        vm.kubevirt.io/workload: server
      labels:
        app: vm1
        kubevirt.io/domain: vm1
        kubevirt.io/size: small
    spec:
      architecture: amd64
      domain:
        cpu:
          cores: 1
          sockets: 1
          threads: 1
        devices:
          disks:
            - disk:
                bus: virtio
              name: rootdisk
            - disk:
                bus: virtio
              name: cloudinitdisk
          interfaces:
            - macAddress: '02:a4:1a:00:00:20'
              masquerade: {}
              model: virtio
              name: default
          networkInterfaceMultiqueue: true
          rng: {}
        features:
          acpi: {}
          smm:
            enabled: true
        firmware:
          bootloader:
            efi: {}
        machine:
          type: pc-q35-rhel9.2.0
        memory:
          guest: 2Gi
        resources: {}
      networks:
        - name: default
          pod: {}
      terminationGracePeriodSeconds: 180
      volumes:
        - dataVolume:
            name: vm1
          name: rootdisk
        - cloudInitNoCloud:
            userData: |
              #cloud-config
              user: fedora
              password: fedora
              chpasswd:
                expire: false
          name: cloudinitdisk
---
apiVersion: kubevirt.io/v1  # vm2 in ns1 (with nad l2-network), the pod networks: pod-network and l2-network
kind: VirtualMachine
metadata:
  name: vm2
  namespace: ns1
  labels:
    app: vm2
spec:
  dataVolumeTemplates:
    - apiVersion: cdi.kubevirt.io/v1beta1
      kind: DataVolume
      metadata:
        name: vm2
      spec:
        sourceRef:
          kind: DataSource
          name: fedora
          namespace: openshift-virtualization-os-images
        storage:
          resources:
            requests:
              storage: 30Gi
  running: true
  template:
    metadata:
      annotations:
        vm.kubevirt.io/flavor: small
        vm.kubevirt.io/os: fedora
        vm.kubevirt.io/workload: server
      labels:
        app: vm2
        kubevirt.io/domain: vm2
        kubevirt.io/size: small
    spec:
      architecture: amd64
      domain:
        cpu:
          cores: 1
          sockets: 1
          threads: 1
        devices:
          disks:
            - disk:
                bus: virtio
              name: rootdisk
            - disk:
                bus: virtio
              name: cloudinitdisk
          interfaces:
            - macAddress: '02:a4:1a:00:00:21'
              masquerade: {}
              model: virtio
              name: default
            - bridge: {}
              macAddress: '02:a4:1a:00:00:49'
              model: virtio
              name: nic-2
          networkInterfaceMultiqueue: true
          rng: {}
        features:
          acpi: {}
          smm:
            enabled: true
        firmware:
          bootloader:
            efi: {}
        machine:
          type: pc-q35-rhel9.2.0
        memory:
          guest: 2Gi
        resources: {}
      networks:
        - name: default
          pod: {}
        - multus:
            networkName: l2-network
          name: nic-2
      terminationGracePeriodSeconds: 180
      volumes:
        - dataVolume:
            name: vm2
          name: rootdisk
        - cloudInitNoCloud:
            networkData: |
              network:
                config:
                  - name: eth1
                    subnets:
                      - address: 192.168.0.21
                        netmask: 255.255.255.0
                        type: static
                    type: physical
                version: 1
            userData: |
              #cloud-config
              user: fedora
              password: fedora
              chpasswd:
                expire: false
              packages:
                - nginx
              runcmd:
                - systemctl enable --now nginx
          name: cloudinitdisk
---
apiVersion: kubevirt.io/v1 # vm3 ns2 (with nad l2-network), the pod-networks :  pod-network and l2-network
kind: VirtualMachine
metadata:
  name: vm3
  namespace: ns2
  labels:
    app: vm3
spec:
  dataVolumeTemplates:
    - apiVersion: cdi.kubevirt.io/v1beta1
      kind: DataVolume
      metadata:
        name: vm3
      spec:
        sourceRef:
          kind: DataSource
          name: fedora
          namespace: openshift-virtualization-os-images
        storage:
          resources:
            requests:
              storage: 30Gi
  running: true
  template:
    metadata:
      labels:
        app: vm3
        kubevirt.io/domain: vm3
        kubevirt.io/size: small
    spec:
      architecture: amd64
      domain:
        cpu:
          cores: 1
          sockets: 1
          threads: 1
        devices:
          disks:
            - disk:
                bus: virtio
              name: rootdisk
            - disk:
                bus: virtio
              name: cloudinitdisk
          interfaces:
            - macAddress: '02:a4:1a:00:00:22'
              masquerade: {}
              model: virtio
              name: default
            - bridge: {}
              macAddress: '02:a4:1a:00:00:50'
              model: virtio
              name: nic-2
          networkInterfaceMultiqueue: true
          rng: {}
        features:
          acpi: {}
          smm:
            enabled: true
        firmware:
          bootloader:
            efi: {}
        machine:
          type: pc-q35-rhel9.2.0
        memory:
          guest: 2Gi
        resources: {}
      networks:
        - name: default
          pod: {}
        - multus:
            networkName: l2-network
          name: nic-2
      terminationGracePeriodSeconds: 180
      volumes:
        - dataVolume:
            name: vm3
          name: rootdisk
        - cloudInitNoCloud:
            networkData: |
              network:
                config:
                  - name: eth1
                    subnets:
                      - address: 192.168.0.22
                        netmask: 255.255.255.0
                        type: static
                    type: physical
                version: 1
            userData: |
              #cloud-config
              user: fedora
              password: fedora
              chpasswd:
                expire: false
              packages:
                - nginx
              runcmd:
                - systemctl enable --now nginx
          name: cloudinitdisk
